--- a/chapter6.tex
+++ b/chapter6.tex
@@ -256,3 +256,64 @@
 \begin{solution}
     
 \end{solution}
+
+% 陈老视频68(2023.02.03)
+\begin{theorem}[第二类换元积分法]
+    若要求$\int f(x) dx$, 若存在$x = \phi(t)$使得$\int f(\phi(t))\phi'(t) \D t = F(t) + C$, 则$\int f(x) \D x = F(\phi^{-1}(x)) + C$
+\end{theorem}
+\begin{remark}
+    \begin{equation*}
+        \int f(x) \D x = \int f(\phi(t)) \D \phi(t) = \int f(\phi(t)) \phi'(t) \D t
+    \end{equation*}
+    若$\int f(\phi(t)) \phi'(t) \D t = F(t) + C$, 则$\int f(x) \D x = F(\phi^{-1}(t)) + C$。
+\end{remark}
+\begin{example}
+    求:
+    \begin{equation*}
+        \int \sqrt{a^2-x^2} \D x
+    \end{equation*}
+\end{example}
+\begin{solution}
+    
+\end{solution}
+
+\begin{example}
+    求:
+    \begin{equation*}
+        \int \frac{\D x}{\sqrt{x^2-a^2}}
+    \end{equation*}
+\end{example}
+\begin{solution}
+    
+\end{solution}
+
+\begin{example}
+    求:
+    \begin{equation}
+        \int \frac{\D x}{\sqrt{x^2+a^2}}
+    \end{equation}
+\end{example}
+\begin{solution}
+    
+\end{solution}
+
+\begin{example}
+    求:
+    \begin{equation*}
+        \int x(2x-1)^{100} \D x
+    \end{equation*}
+\end{example}
+\begin{solution}
+    
+\end{solution}
+
+\begin{example}
+    求:
+    \begin{equation*}
+        \int \frac{\D x}{x^2\sqrt{1+x^2}}
+    \end{equation*}
+    请分别用第一类和第二类换元法(两种)求解。
+\end{example}
+\begin{solution}
+    
+\end{solution}
