--- a/chapter7.tex
+++ b/chapter7.tex
@@ -52,3 +52,21 @@
     \end{equation*}
     为达布小和。
 \end{definition}
+
+\begin{lemma}
+    若在原来的划分中增加分点, 则大和不增, 小和不减。
+\end{lemma}
+\begin{proof}
+    
+\end{proof}
+
+\begin{lemma}
+    对任意的划分$P_1$, $P_2$,
+    \begin{equation*}
+        m(b-a) \le \underbar{S}(P_2) \le \bar{S}(P_2) \le M(b-a)
+    \end{equation*}
+\end{lemma}
+\begin{proof}
+    
+\end{proof}
+
