--- a/chapter3.tex
+++ b/chapter3.tex
@@ -139,7 +139,9 @@ $O(x_0, \rho) \backslash \collect{x_0}$称为去心邻域。
 
     又因为对于$\collect{x_n}$, 有$x_n \neq x_0$且$\mylim{n}{x_n} = 0$, 即$\forall \delta > 0$, $\exists N \in \mathbb{N}^+$, $\forall n > N$, 成立$0 < \left| x_n - x_0 \right| < \delta$。
 
-    则$\forall \epsilon > 0$, $\exists \delta > 0$, 对于该$\delta$, $\exists N \in \mathbb{N}^+$, $\forall n > N$, 有$0 < \left| x_n - x_0 \right| < \delta$, 且在该$\delta$下有$\left| f(x_n) - A \right| < \epsilon$。证明完毕。
+    则$\forall \epsilon > 0$, $\exists \delta > 0$, 对于该$\delta$, $\exists N \in \mathbb{N}^+$, $\forall n > N$, 有$0 < \left| x_n - x_0 \right| < \delta$, 且在该$\delta$下有$\left| f(x_n) - A \right| < \epsilon$。
+
+    \qed
 
     {\bf 证明充分性}, 即证明:
     
@@ -154,10 +156,12 @@ $O(x_0, \rho) \backslash \collect{x_0}$称为去心邻域。
         \exists x_3(0 < \left| x_3 -x_0 \right| < \frac{1}{3}), \left| f(x_3) - A \right| \ge \epsilon_0 \\
         \cdots \cdots
     \end{gather*}
-    对于数列$\collect{x_n}$, 对于$\epsilon_0$, $\forall n$, $\left| x_n - x_0\right| > \epsilon_0$恒成立。
+    对于数列$\collect{x_n}$, 对于$\epsilon_0$, $\forall n$, $\left| f(x_n) - A\right| \ge \epsilon_0$恒成立。
 
     即: $\exists \epsilon = \epsilon_0 > 0$, $\forall N \in \mathbb{N}^+$, $\exists n > N$, $\left| f(x_n) - A\right| > \epsilon$。
-    则存在数列$\collect{x_n}$不收敛于A。这与条件矛盾, 则假设不成立。证明完毕。
+    则存在数列$\collect{x_n}$不收敛于A。这与条件矛盾, 则假设不成立。
+
+    \qed
 
 \end{proof}
 
