--- a/chapter7.tex
+++ b/chapter7.tex
@@ -143,3 +143,34 @@ $M_i-m_i$表示了$f(x)$在$[x_{i-1}, x_i]$上的振幅, 记为$\omega_i$。
     在$[a, b]$上有界的函数$f(x)$可积的充分必要条件是: $\forall \epsilon > 0$, $\exists P$, 使得$\sum_{i=0}^n\omega_i \Delta x_i < \epsilon$。
 \end{theorem}
 
+% 陈老视频79(2023.02.15)
+\begin{lemma}
+    闭区间上只有有限个不连续点的有界函数一定可积。
+\end{lemma}
+\begin{proof}
+    
+\end{proof}
+
+\begin{example}
+    Direchlet函数不可积, Riemman函数在$[0, 1]$上可积。
+    
+    Riemman函数的表达式为:
+    \begin{equation*}
+        R(x) = 
+        \begin{cases}
+            \frac{1}{p} &\quad x = \frac{q}{p} \quad (p in N^+, q \in N^+, p, q\text{互质}) \\
+            1 &\quad x = 0 \\
+            0 &\quad x$是无理数$    
+        \end{cases}
+    \end{equation*}
+\end{example}
+\begin{proof}
+    
+\end{proof}
+
+\begin{example}
+    振幅不能任意小的小区间长度之和可以任意小的话, 则$f(x)$可积。
+\end{example}
+\begin{proof}
+    
+\end{proof}
