--- a/chapter7.tex
+++ b/chapter7.tex
@@ -174,3 +174,125 @@ $M_i-m_i$表示了$f(x)$在$[x_{i-1}, x_i]$上的振幅, 记为$\omega_i$。
 \begin{proof}
     
 \end{proof}
+
+% 陈老视频80(2023.02.18)
+\section{定积分的基本性质}
+\subsection{线性性}
+\begin{theorem}[线性性]
+    $f(x)$, $g(x)$在$[a, b]$上可积, 则$k_1f(x)+k_2g(x)$也在$[a, b]$上可积, 且
+    \begin{equation*}
+        \int_{a}^{b}[k_1f(x)+k_2g(x)]\D x = k_1\int_{a}^{b}f(x) \D x + k_2\int_{a}^{b}g(x) \D x
+    \end{equation*}
+\end{theorem}
+\begin{proof}
+    
+\end{proof}
+
+\begin{lemma}
+    $f(x)$在$[a, b]$上可积, $f$与$g$仅在有限个点上取不同的值, 则$g(x)$也在$[a, b]$上可积, 且
+    \begin{equation*}
+        \int_{a}^{b}g(x)\D x = \int_{a}^{b}f(x)\D x
+    \end{equation*} 
+\end{lemma}
+\begin{proof}
+    
+\end{proof}
+
+乘积可积性
+\begin{theorem}[乘积可积性]
+    $f(x)$, $g(x)$在$[a, b]$上可积, 则$f(x)g(x)$在$[a, b]$上可积。
+\end{theorem}
+\begin{proof}
+    
+\end{proof}
+\begin{remark}
+    \begin{equation*}
+        \int_{a}^{b}f \cdot g \D x = \int_{a}^{b}f \D x \dot \int_{a}^{b}g \D x
+    \end{equation*}
+\end{remark}
+
+保序性
+\begin{theorem}[保序性]
+    $f(x)$, $g(x)$在$[a, b]$上可积, $f(x) \ge g(x)$, 则
+    \begin{equation*}
+        \int_{a}^{b} f(x) \D x \ge \int_{a}^{b} g(x) \D x
+    \end{equation*}
+\end{theorem}
+\begin{proof}
+    
+\end{proof}
+
+绝对可积性
+\begin{theorem}[绝对可积性]
+    $f(x)$在$[a, b]$上可积, 则$|f(x)|$也在$[a, b]$上可积, 且
+    \begin{equation*}
+        \left|\int_{a}^{b}f(x) \D x \right| \le \int_{a}^{b}|f(x)| \D x
+    \end{equation*}
+\end{theorem}
+\begin{proof}
+    
+\end{proof}
+\begin{remark}
+    $f(x)$可积 $\Rightarrow$ $|f(x)|$可积, $|f(x)|$可积 $\nRightarrow$ $f(x)$可积
+\end{remark}
+
+区间可加性
+\begin{theorem}[区间可加性]
+    设$f(x)$在$[a, b]$上可积, $c \in (a, b)$, 则$f(x)$在$[a, c]$与$[c, b]$上可积。反之, 若$f(x)$在$[a, c]$, $[c, b]$上可积, 则$f(x)$在[a, b]上可积, 且
+    \begin{equation*}
+        \int_{a}^{b}f(x) \D x = \int_{a}^{c}f(x) \D x + \int_{c}^{b}f(x) \D x
+    \end{equation*}
+\end{theorem}
+\begin{proof}
+    
+\end{proof}
+
+% 陈老视频80(2023.02.18)
+\begin{remark}
+    $c$点不一定要在$[a, b]$内部, $c$点在$[a, b]$外部也成立。
+\end{remark}
+
+积分第一中值定理
+\begin{theorem}[积分第一中值定理]
+    $f(x)$, $g(x)$在$[a, b]$上可积, $g(x)$在$[a, b]$上不变号, 则$\exists \eta \in [m, M], M = \sup_{x \in [a, b]} f(x), m = \inf_{x \in [a, b]} f(x)$, 使
+    \begin{equation*}
+        \int_{a}^{b}f(x)g(x)\D x = \eta \int_{a}^{b}g(x)\D x
+    \end{equation*}
+    若$f(x)$在$[a, b]$上连续, 则$\exists \xi \in [a, b]$, 使
+    \begin{equation*}
+        \int_a^b f(x)g(x) \D x = f(\xi)\int_a^b g(x) \D x
+    \end{equation*}
+\end{theorem}
+\begin{proof}
+    
+\end{proof}
+\begin{remark}
+    考虑$g(x) = 1$, 则
+    \begin{equation*}
+        \int_a^b f(x) g(x) \D x = \begin{cases}
+            \eta(b-a) &\quad f\text{可积} \\
+            f(\xi)(b-a) &\quad f\text{连续}
+        \end{cases}
+    \end{equation*}
+    其中$\eta \in [m, M]$, $\xi \in [a, b]$。
+\end{remark}
+
+\begin{example}
+    $f(x)$在$[a, b]$连续, $f(x) > 0$, 证明
+    \begin{equation*}
+        \frac{1}{b-a}\int_a^b \ln f(x) \D x \le \ln\left(\frac{1}{b-a}\int_a^b f(x) \D x\right)
+    \end{equation*}
+\end{example}
+\begin{proof}
+
+\end{proof}
+
+\begin{example}[Holder不等式]
+    $f(x)$, $g(x)$在$[a, b]$上连续, $p, q > 0$, $\frac{1}{p}+\frac{1}{q} = 1$, 则
+    \begin{equation*}
+        \int_a^b |f(x)q(x)| \D x = \left(\int_a^b |f(x)|^p \D x\right)^{\frac{1}{p}}\left(\int_a^b |g(x)|^q \D x\right)^{\frac{1}{q}}
+    \end{equation*}
+\end{example}
+\begin{proof}
+    
+\end{proof}
