--- a/chapter7.tex
+++ b/chapter7.tex
@@ -548,3 +548,42 @@ $M_i-m_i$表示了$f(x)$在$[x_{i-1}, x_i]$上的振幅, 记为$\omega_i$。
         \int_0^1 \frac{\ln(1+x)}{1+x^2} \D x
     \end{equation*}
 \end{example}
+
+% 陈老视频85(2023.02.25)
+\begin{example}
+    求
+    \begin{equation*}
+        I = \int_{0}^{\frac{\pi}{2}} \frac{\sin^2x}{\sin x+\cos x} \D x
+    \end{equation*}
+\end{example}
+\begin{solution}
+    
+\end{solution}
+
+\begin{example}
+    求
+    \begin{equation*}
+        \int_0^2 \frac{(x-1)^2}{(x-1)^2+x^2(x-2)^2} \D x
+    \end{equation*}
+\end{example}
+\begin{solution}
+    
+\end{solution}
+
+\begin{theorem}
+    $f(x)$定义与$[-a, a]$上, 可积, 则
+    \begin{enumerate}
+        \item $f(x)$是奇函数, 则$\int_{-a}^a f(x)\D x = 0$
+        \item $f(x)$是偶函数, 则$\int_{-a}^af(x) \D x = 2\int_0^af(x) \D x$
+    \end{enumerate}
+\end{theorem}
+\begin{proof}
+    
+\end{proof}
+
+\begin{theorem}
+    $\collect{1, \sin x, \cos x, \sin 2x, \cos 2x, \cdots, \sin nx, \cos nx, \cdots}$是任意长度为$2\pi$的区间上的正交函数列。
+\end{theorem}
+\begin{proof}
+    
+\end{proof}
