--- a/chapter7.tex
+++ b/chapter7.tex
@@ -587,3 +587,67 @@ $M_i-m_i$表示了$f(x)$在$[x_{i-1}, x_i]$上的振幅, 记为$\omega_i$。
 \begin{proof}
     
 \end{proof}
+
+% 陈老视频86(2023.02.26)
+\section{定积分在几何中的应用}
+\subsection{平面图形的面积}
+$y = f(x), f(x) \ge 0$, 则由$y=f(x), x=a, x=b, y=0$围成的图像的面积为: $A=\int_a^b f(x)\D x$, 若$f(x) < 0$, 则$A = -\int_a^b f(x)\D x$, 若$f(x)$不定号, 则$A=\int_a^c f(x)\D x - int_c^b f(x)\D x = \int_a^b |f(x)| \D x$。
+
+假设有$y = f(x), y = g(x), f(x) \ge g(x)$, 则由$y=f(x), y=g(x), x=a, x=b$围成的图像的面积为: $A = \int_a^b (f(x)-g(x)) \D x$, 若$f(x)$于$g(x)$大小不定, 则$A = \int_a^b|f(x)-g(x)|\D x$。
+
+\begin{example}
+    $y = x^2$与$y = \sqrt{x}$所围区域的面积。
+\end{example}
+\begin{solution}
+    
+\end{solution}
+
+\begin{example}
+    存在等轴双曲线$x^2-y^2 = 1$, 设$(x, y)$是双曲线上的一点, 求$(0, 0)$与$(x, y)$, $(x, -y)$所围图形的面积。
+\end{example}
+\begin{solution}
+    
+\end{solution}
+
+\subsubsection{参数表示下求面积}
+设曲线
+\begin{equation*}
+    \begin{cases}
+        x = x(t) \\
+        y = y(t)
+    \end{cases}
+    t \in [T_1, T_2]
+\end{equation*}
+$x(t)$有连续导数, $x'(t) \neq 0$。假设$a = x(T_1), b = x(T_2)$, 则面积为:
+\begin{equation*}
+    A = \int_a^b f(x) \D x = \int_{T_1}^{T_2} f(x(t))x'(t) \D t = \int_{T_1}^{T_2} y(t) x'(t) \D t
+\end{equation*}
+
+\begin{example}
+    求椭圆
+    \begin{equation*}
+        \frac{x^2}{a^2} + \frac{y^2}{b^2} = 1
+    \end{equation*}
+    的面积。
+\end{example}
+\begin{solution}
+    
+\end{solution}
+
+\begin{example}
+    求旋轮线
+    \begin{equation*}
+        \begin{cases}
+            x = a(t - \sin t) \\
+            y = a(1 - \cos t)
+        \end{cases}
+        t \in [0, 2\pi]
+    \end{equation*}
+    与$y = 0$所围的面积。
+\end{example}
+\begin{solution}
+    
+\end{solution}
+
+\subsubsection{极坐标表示下求面积}
+设$r = r(\theta), \theta \in [\alpha, \beta]$, 现在我们要求$\collect{r(\theta) | \alpha \le \theta \le \beta, 0 \le r \le r(\theta)}$的面积。
