--- a/chapter7.tex
+++ b/chapter7.tex
@@ -796,8 +796,57 @@ $\D l = \sqrt{x'(t)^2+y'(t)^2} \D t$称为弧长微分, 那么弧长可以表示
 \end{equation*}
 $A(x)$为截面面积。
 
+% 陈老视频89(2023.03.04)
 \begin{example}
+    求几何体的体积(柱体斜截)。
+\end{example}
+\begin{solution}
     
+\end{solution}
+
+\begin{example}
+    旋转体的体积
+\end{example}
+\begin{solution}
+    
+\end{solution}
+
+\begin{example}
+    求半径为$a$的球的体积。
+\end{example}
+\begin{solution}
+    
+\end{solution}
+
+\begin{example}
+    求旋轮线旋转体的体积:
+    \begin{equation*}
+        \begin{cases}
+            x = a(t-\sin t) \\
+            y = a(1 - \cos t)
+        \end{cases}
+    \end{equation*}
+\end{example}
+\begin{solution}
+    
+\end{solution}
+
+\begin{example}
+    旋转曲面的面积
+\end{example}
+\begin{solution}
+    
+\end{solution}
+
+\begin{example}
+    求半径为$a$的球的面积。
+\end{example}
+\begin{solution}
+    
+\end{solution}
+
+\begin{example}
+    求旋轮线一拱绕$x$轴旋转的曲面面积。
 \end{example}
 \begin{solution}
     
