--- a/chapter7.tex
+++ b/chapter7.tex
@@ -851,3 +851,45 @@ $A(x)$为截面面积。
 \begin{solution}
     
 \end{solution}
+
+% 陈老视频90(2023.03.05)
+\subsection{曲线的曲率}
+\begin{equation*}
+    \bar{K} = \left| \frac{\Delta \phi}{\Delta s} \right|
+\end{equation*}
+表示$\overset{\frown}{AB}$的平均曲率。
+
+则曲线C在A点的曲率$K$: $K = \funclim{\Delta s}{0}{\left|\frac{\Delta \phi}{\Delta s} \right|}$
+
+曲线在$A$点的曲率圆(密切圆)。
+
+计算$K$的公式:
+\begin{equation*}
+    K = \frac{|x'(t)y''(t)-x''(t)y'(t)|}{(x'(t)^2+y'(t)^2)^{\frac{3}{2}}}
+\end{equation*}
+
+\begin{example}
+    椭圆方程:
+    \begin{equation*}
+        \begin{cases}
+            a = a\cos t \\
+            b = b \sin t
+        \end{cases}
+        0 \le t \le 2\pi, a > b > 0
+    \end{equation*}
+    求椭圆上曲率最大和最小的点。
+\end{example}
+\begin{solution}
+    
+\end{solution}
+
+\begin{example}
+    求旋链线
+    \begin{equation*}
+        y = \frac{a}{2}\left( \e^{\frac{x}{a}} + \e^{-\frac{x}{a}}\right)
+    \end{equation*}
+    的曲率。
+\end{example}
+\begin{solution}
+    
+\end{solution}
