--- a/chapter7.tex
+++ b/chapter7.tex
@@ -893,3 +893,21 @@ $A(x)$为截面面积。
 \begin{solution}
     
 \end{solution}
+
+% 陈老视频91(2023.03.06)
+\section{微积分实际应用举例}
+\subsection{微元法}
+$\forall P$, $\forall \xi_i \in [x_{i-1}, x_i]$, 求$\funclim{\lambda}{0}{\sum f(\xi_i)\Delta x_i}$。
+平面直线
+
+平面
+\begin{example}[静态分布求总量]
+    
+\end{example}
+\begin{solution}
+    
+\end{solution}
+
+平面曲线
+
+动态效应
