--- a/chapter7.tex
+++ b/chapter7.tex
@@ -911,3 +911,16 @@ $\forall P$, $\forall \xi_i \in [x_{i-1}, x_i]$, 求$\funclim{\lambda}{0}{\sum f
 平面曲线
 
 动态效应
+
+% 陈老视频92(2023.03.07)
+\section{简单数学模型和求解}
+跟踪问题模型
+
+火箭飞行的运动规律
+
+人口模型(Logistic人口模型)
+
+Verhulst
+\begin{equation*}
+    P'(t) = \lambda P(t)\left(1-\frac{P(t)}{P'(t)}\right)
+\end{equation*}
